# smart_car

./: .clang-format  .gitignore  README.md  build.bash  build_all_smartcar.bash  build_smartcar.bash
install/: local_setup.sh  setup.sh
install/smart_car/share/smart_car/: package.sh
install/smart_car/share/smart_car/launch/: simulation.launch.py
install/smart_car/share/smart_car/urdf/: smartcar.urdf.xacro
log/: latest_build
src/: test.world
src/robot_sim/install/: local_setup.sh  setup.sh
src/robot_sim/install/robot_arm_sim/include/robot_arm_sim/: CupPosePublisher.hpp  RobotPosePublisher.hpp
src/robot_sim/install/robot_arm_sim/lib/robot_arm_sim/: cup_pose_publisher  robot_arm_sim
src/robot_sim/install/robot_arm_sim/share/robot_arm_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/robot_sim/install/robot_arm_sim/share/robot_arm_sim/cmake/: robot_arm_simConfig.cmake
src/robot_sim/install/robot_arm_sim/share/robot_arm_sim/launch/: simulation.launch.py
src/robot_sim/log/: latest_build
src/smart_car/: CMakeLists.txt  package.xml
src/smart_car/launch/: gazebo.launch.py  simulation.launch.py
src/smart_car/log/: latest_build
src/smart_car/urdf/: smartcar.urdf  smartcar.urdf.xacro
src/smartcar_msg/: CMakeLists.txt  package.xml
src/smartcar_msgs/: CMakeLists.txt  package.xml
src/smartcar_simulation/: CMakeLists.txt  package.xml
src/smartcar_simulation/config/: ekf.yaml
src/smartcar_simulation/include/smartcar_simulation/: JointStatePublisher.hpp  Odometry.hpp
src/smartcar_simulation/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py  simulation.launch.py
src/smartcar_simulation/rviz/: nav2_config.rviz  urdf_config.rviz
src/smartcar_simulation/src/: JointStatePublisher.cpp  JointStatePublisherMain.cpp  Odometry.cpp  OdometryMain.cpp
src/smartcar_simulation/urdf/: smartcar.urdf  smartcar.urdf.xacro
(+3 files in other folders)
